Fix background on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,11 @@
     }
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 * html,button,textarea,input{
     font-family: 'Montserrat regular';
 }
